text align center for * in searchResults--did it fix mobile left align?

--- a/src/components/search/SearchResults.module.scss
+++ b/src/components/search/SearchResults.module.scss
@@ -2,6 +2,9 @@
 @import '~slick-carousel/slick/slick-theme.css';
 @import '~slick-carousel/slick/slick.css';
 
+* {
+  text-align: center;
+}
 .resultsArea {
   display: none;
 }
